--- a/templates/warehousing/admin/content/inbound_reports.html
+++ b/templates/warehousing/admin/content/inbound_reports.html
@@ -76,7 +76,7 @@
                                         <th>Request ID</th>
                                         <th>Employee Name</th>
                                         <th>Status</th>
-                                        <th>Total Quantity</th>
+                                        <!-- <th>Total Quantity</th> -->
                                         <th>Date Created</th>
                                         <th class="text-center">Actions</th>
                                     </tr>
@@ -139,14 +139,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="total_quantity" id="total_quantityLabel">Total Quantity</label>
                                         <input type="number" class="form-control" id="total_quantity" placeholder="Enter Total Quantity" required>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -197,14 +197,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="e_total_quantity" id="e_total_quantityLabel">Total Quantity</label>
                                         <input type="number" class="form-control" id="e_total_quantity" placeholder="Enter Total Quantity" required>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- BUTTONS -->
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
