--- a/templates/warehousing/manager/default/base.html
+++ b/templates/warehousing/manager/default/base.html
@@ -132,6 +132,11 @@
                         
                     </div>
                     <div class="dropdown-divider"></div>
+                    <span class="dropdown-item dropdown-header" id="how_many_staff_notif">0 Notification from Staff</span>
+                    <div id="staff_notif">
+                        
+                    </div>
+                    <div class="dropdown-divider"></div>
                     <div id="see_all_notif">
 
                     </div>
