--- a/templates/warehousing/staff/content/dashboard.html
+++ b/templates/warehousing/staff/content/dashboard.html
@@ -94,3 +94,6 @@
     </section>
     <!-- /.content -->
 {%endblock%}
+{%block scripts%}
+    <script src="{{url_for('static', path='/dist/js/warehousing/staff/dashboardStaff.js')}}"></script>
+{%endblock%}
