--- a/templates/warehousing/admin/content/employees.html
+++ b/templates/warehousing/admin/content/employees.html
@@ -75,8 +75,8 @@
                                         <th width="10%">User ID</th>
                                         <th width="5%">User Type</th>
                                         <th width="10%">Full Name</th>
-                                        <!-- <th width="10%">Middle Name</th>
-                                        <th width="10%">Last Name</th> -->
+                                        <th width="10%">Middle Name</th>
+                                        <th width="10%">Last Name</th>
                                         <th width="5%">Age</th>
                                         <th width="10%">Contact</th>
                                         <th width="10%">Address</th>
