--- a/templates/warehousing/manager/content/dashboard.html
+++ b/templates/warehousing/manager/content/dashboard.html
@@ -94,3 +94,7 @@
     </section>
     <!-- /.content -->
 {%endblock%}
+
+{%block scripts%}
+    <script src="{{url_for('static', path='/dist/js/warehousing/manager/dashboardManager.js')}}"></script>
+{%endblock%}
