Sprint 2 bug fix done

--- a/templates/warehousing/admin/content/employees.html
+++ b/templates/warehousing/admin/content/employees.html
@@ -277,7 +277,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="e_employee_contact" id="e_employee_contactLabel">Contact #</label>
-                                        <input type="number" class="form-control" id="e_employee_contact" placeholder="Enter Employee Contact#" required>
+                                        <input type="number" maxlength="13" class="form-control" id="e_employee_contact" placeholder="Enter Employee Contact#" required>
                                     </div>
                                 </div>
                             </div>
