--- a/templates/warehousing/admin/content/supplies.html
+++ b/templates/warehousing/admin/content/supplies.html
@@ -176,7 +176,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supply_description" id="supply_descriptionLabel">Supply Descrription</label>
+                                        <label for="supply_description" id="supply_descriptionLabel">Supply Description</label>
                                         <input type="input" class="form-control" id="supply_description" placeholder="Enter Description">
                                     </div>
                                 </div>
@@ -352,6 +352,36 @@
         </div><!-- /.modal -->
     </div>
     <!-- END Editing Supply Modal -->
+
+        <!-- Logout Modal -->
+        <div class="modal fade" id="alert_modal">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">
+                            <i class= "fas fa-exclamation-triangle mr-1"></i>
+                            Confirmation</h4>
+                        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                        </button>
+                    </div>
+                    <div class="modal-body" id="modal_viewing">
+                        <!-- CONTENT -->
+                            <div class="card-body">
+                                Are you sure you want to Delete?
+                            </div>
+                        <!-- END CONTENT  -->
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="Submit" class="btn btn-danger" id="button_logout" onClick="return deleteData()">Yes, Delete it!<i class= "fas fa-trash-alt ml-1"></i></button>
+                            </div>
+                            <!-- END BUTTONS -->
+                    </div><!-- /.modal-content -->
+                </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+        </div>
+        <!-- END Logout Modal -->
 
 
 
