--- a/templates/warehousing/admin/default/base.html
+++ b/templates/warehousing/admin/default/base.html
@@ -214,7 +214,7 @@
                         <i class="fas fa-cogs mr-2"></i> Settings
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item" onClick="return logout()">
+                    <a href="#" class="dropdown-item" data-toggle="modal" data-target="#logout_modal">
                         <i class="fas fa-sign-out-alt mr-2"></i> Logout
                     </a>
                     <!-- <div class="dropdown-divider"></div>
@@ -410,7 +410,7 @@
 
     <!-- Logout Modal -->
     <div class="modal fade" id="logout_modal">
-        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">
@@ -422,17 +422,17 @@
                 </div>
                 <div class="modal-body" id="modal_viewing">
                     <!-- CONTENT -->
-                    <form id="e_form_id" name="e_form_id" enctype="multipart/form_data">
                         <div class="card-body">
                             Are you sure you want to Logout?
-                            <!-- BUTTONS -->
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                <button type="Submit" class="btn btn-danger" id="button_logout" onClick="return logout()">Logout<i class= "fas fa-sign-out-alt"></i></button>
-                            </div>
-                            <!-- END BUTTONS -->
+                            
                         </div>
-                    </form> <!-- END CONTENT -->
+                    <!-- END CONTENT  -->
+                        <!-- BUTTONS -->
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="Submit" class="btn btn-danger" id="button_logout" onClick="return logout()">Logout<i class= "fas fa-sign-out-alt ml-1"></i></button>
+                        </div>
+                        <!-- END BUTTONS -->
                 </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
