--- a/templates/warehousing/manager/content/employees.html
+++ b/templates/warehousing/manager/content/employees.html
@@ -27,7 +27,7 @@
             <div class="row">     
                 <!-- Button -->
                 <div class="col-sm-6">
-                    <!-- <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Employee</a> -->
+                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Employee</a>
                     <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
                 </div>
                 <!-- / Button -->
